<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    
	<!-- SPINCAST_COORDINATES -->
    <!--=================================== 
    This section will be replaced in spincast-website's pom.xml 
    to generate the .zip to download the demo.
    
    Do not remove the "SPINCAST_COORDINATES" comments, they
    facilitate the replacement!
    ====================================-->
    <parent>
        <groupId>org.spincast</groupId>
        <artifactId>spincast-parent</artifactId>
        <version>2.0.0-SNAPSHOT</version>
        <relativePath>../../../spincast-parent</relativePath>
    </parent>
    <artifactId>spincast-demos-sum</artifactId>
    
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Sumarize two numbers demo</description>
    <!-- /SPINCAST_COORDINATES -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <app.mainClass>org.spincast.demos.sum.App</app.mainClass>
    </properties>

	<dependencies>
    
        <!--=================================== 
        Spincast default
        ====================================-->
        <dependency>
            <groupId>org.spincast</groupId>
            <artifactId>spincast-default</artifactId>
            <version>${project.version}</version>
        </dependency>
        
        <!--=================================== 
        Logback - logging implementation for Slf4j
        ====================================-->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        
        <!--=================================== 
        Spincast testing default
        ====================================-->
        <dependency>
            <groupId>org.spincast</groupId>
            <artifactId>spincast-testing-default</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

	</dependencies>

	<build>
        <plugins>
        
            <!--=================================== 
            Java 17 by default
            ====================================-->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version><!--$NO-MVN-MAN-VER$-->
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            
            <!--=================================== 
            This adds the artifact version to the jar Manifest 
            so it can be read using:
            "getClass().getPackage().getImplementationVersion()".
            ====================================-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version><!--$NO-MVN-MAN-VER$-->
                <configuration>
                    <archive>                   
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        
            <!--=================================== 
            Fat jar creation
            ====================================-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <!--=================================== 
                                see : http://stackoverflow.com/a/6743609/843699 
                                ====================================-->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${app.mainClass}</Main-Class>
                                    </manifestEntries>
                                </transformer>
                            </transformers>   
                        </configuration>
                    </execution>
                </executions> 
            </plugin>
            
            <!--===================================
            Delete the unecessary original-xxx and xxx-shaded
            generated artifact
            ====================================-->
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>delete-unwanted-artifacts</id>
                        <phase>package</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <configuration>
                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
                            <filesets>
                                <fileset>
                                    <directory>${project.build.directory} </directory>
                                    <includes>
                                        <include>original-${project.build.finalName}.jar</include>
                                        <include>${project.build.finalName}-shaded.jar</include>
                                    </includes>
                                </fileset>
                             </filesets>
                         </configuration>
                    </execution>
                </executions>
            </plugin>
            
        </plugins>
	</build>
</project>
